--- a/data/projects/2017-12-22-project-1.yaml
+++ b/data/projects/2017-12-22-project-1.yaml
@@ -1,11 +1,11 @@
 modalID: 1
-title: Cat 1
+title: 猫咪拉肚子
 date: 2017-12-22
 img: 1.jpg
 client: Cat 1
 clientLink: "#"
 category: Cat
-description: 猫咪拉肚子，首先我们一定要找出猫咪拉肚子的原因，像受凉、饮食不当、肠炎都会导致猫咪拉肚子，对症下药才有好的效果。如果猫咪长期拉肚子不好，建议及时去医院接受兽医检查，以免耽误病情。
+description: 首先我们一定要找出猫咪拉肚子的原因，像受凉、饮食不当、肠炎都会导致猫咪拉肚子，对症下药才有好的效果。如果猫咪长期拉肚子不好，建议及时去医院接受兽医检查，以免耽误病情。
 
              　　一、猫咪拉肚子的原因
 
