--- a/data/projects/2017-12-22-project-3.yaml
+++ b/data/projects/2017-12-22-project-3.yaml
@@ -5,6 +5,4 @@ img: 3.jpg
 client: Cat 3
 clientLink: "#"
 category: Cat
-description: Bringing home a new cat is much like adopting a human baby. However, in the case of a cat, you'll be shopping for a litter box instead of a changing table.
-
-Before you bring your new cat or kitten home, there are a number of things to collect or buy, so your cat will feel like a family member rather than a visitor. Do this a few days in advance to minimize stress for you and your cat on "homecoming day". In the excitement of bringing your cat home, you don't want to suddenly discover at 8 p.m. that you forgot to buy cat food.
+description: Bringing home a new cat is much like adopting a human baby. However, in the case of a cat, you'll be shopping for a litter box instead of a changing table. Before you bring your new cat or kitten home, there are a number of things to collect or buy, so your cat will feel like a family member rather than a visitor. Do this a few days in advance to minimize stress for you and your cat on "homecoming day". In the excitement of bringing your cat home, you don't want to suddenly discover at 8 p.m. that you forgot to buy cat food.
